JSP_test/WebContent/error/receiveError.jsp
<%@ page language="java" contentType="text/html; charset=UTF-8"
    pageEncoding="UTF-8" isErrorPage="true"%>
<%@ page trimDirectiveWhitespaces="true"%>
<!DOCTYPE html>
<html>
<head>
<meta charset=UTF-8">
<title>Insert title here</title>
</head>
<body>
	<h1>서버에 장애가 발생하여 서비스를 중단합니다</h1>
	<p><%=exception.getMessage() %></p>
</body>
</html>